--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <title>
       Lighter
     </title>
-    <script type="text/javascript"></script>
-    <script type="text/javascript" src="assets/js/main.js"></script>
     <!-- // <script type="text/javascript" src="/js/jquery.parallax.js"></script> -->
     <!-- Latest compiled and minified JavaScript -->
     <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
     <script src="http://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
     <script src="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="assets/js/jquery.flip.min.js"></script>
+    <script type="text/javascript" src="assets/js/main.js"></script>
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
@@ -28,13 +28,6 @@
       </div>
       <div class="center-block game-container">
         <div class="grid-box">
-          <div class="lighter-item"></div>
-          <div class="lighter-item"></div>
-          <div class="lighter-item"></div>
-          <div class="lighter-item"></div>
-          <div class="lighter-item"></div>
-          <div class="lighter-item"></div>
-          <div class="lighter-item"></div>
         </div> 
       </div>
     </div>
