--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
         <div class="grid-box">
         </div>
       </div>
+      <div class="center-block instruction"><span style="font-weight:bold">How to Play:</span> When click to a circle, all neighbor will change their color.Make all become red to win.</div>
     </div>
   </body>
 </html>
