add flash game v2

--- a/the_lab.html
+++ b/the_lab.html
@@ -7,7 +7,7 @@
   <body>
     <div>
       <div style="margin: auto;width: 30%" id="game">
-        <embed src="public/the_lab.swf" width="600" height="400" quality="high" menu="false" bgcolor="#ffffff" PLUGINSPAGE="http://www.macromedia.com/go/getflashplayer" TYPE="application/x-shockwave-flash" allowScriptAccess="always">
+        <embed src="public/lab_game.swf" width="600" height="400" quality="high" menu="false" bgcolor="#ffffff" PLUGINSPAGE="http://www.macromedia.com/go/getflashplayer" TYPE="application/x-shockwave-flash" allowScriptAccess="always">
       </div>
     </div>
     <script type="text/javascript" src="assets/js/zoom.js"></script>
