--- a/the_office.html
+++ b/the_office.html
@@ -1,5 +1,5 @@
 <div>
   <div style="margin: auto;width: 30%">
-    <embed src="public/the_office.swf" width="800" height="600" quality="high" menu="false" bgcolor="#ffffff" PLUGINSPAGE="http://www.macromedia.com/go/getflashplayer" TYPE="application/x-shockwave-flash" allowScriptAccess="always">
+    <embed src="public/office.swf" width="800" height="600" quality="high" menu="false" bgcolor="#ffffff" PLUGINSPAGE="http://www.macromedia.com/go/getflashplayer" TYPE="application/x-shockwave-flash" allowScriptAccess="always">
   </div>
 </div>
